# GLApp

./: .gitignore  .gitmodules  README.md  index.html
Data/Models/: FbxTest.fbx  UnitSphere.fbx
Data/Shaders/: ColourSimple.frag  Default.vert  GBuffer.frag  GBuffer.vert  LightAmbient.frag  LightAmbient.vert  LightVolume.frag  LightVolume.vert  TextureCopy.frag  TextureCopy.vert  test.frag  test.vert
Data/Textures/: test.dds  test.tga
Libraries/Lib/: assimp.lib  assimpd.lib  glfw3.lib  glfw3_d.lib  glfw3dll.lib  glfw3dll_d.lib  glload.lib  glloadD.lib
MSVC/: GLApp.sln
MSVC/BuildRules/: CopyDependencies.props  CopyDependencies.targets  CopyDependencies.xml
MSVC/GLApp/: GLApp.vcxproj  GLApp.vcxproj.filters
Site/Source/: README.md  Site.cabal  Site.hs  build.bat  buildSiteExec.bat  cabal.config  clean.bat  deploy.bat  index.md  rebuild.bat  watch.bat
Site/Source/pages/: Example_Page.md
Site/Source/posts/: 2014-08-27-Example_Post.md
Site/Source/slides/: 2014-08-27-Example_Slides.md  2014-09-01-Debugging_Graphics.md  2014-10-21-Deferred_Rendering.md
Site/Source/templates/: default.html  default_no_content.html  index.html
Source/: App.cpp  App.h  BaseApp.cpp  BaseApp.h  main.cpp
Source/Apps/: BaseApp.cpp  BaseApp.h  DeferredRenderingApp.cpp  DeferredRenderingApp.h
Source/Core/: AppBase.cpp  AppBase.h  NullPtr.h  ObjectCache.h  Resource.h  ResourceCache.h  ResourceLoader.cpp  ResourceLoader.h
Source/Font/: Font.cpp  Font.h  FontFactory.cpp  FontFactory.h  FontLoader.cpp  (+3 more)
slides/: 2014-09-01-Debugging_Graphics.html  2014-10-21-Deferred_Rendering.html
(+90 files in other folders)
